--- a/forecasts/forecast-fx.qmd
+++ b/forecasts/forecast-fx.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: апрель 2025 г.
+## Результаты опроса: май 2025 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -42,13 +42,10 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-Фактический масштаб введенных в апреле импортных пошлин США и ответных мер на них со стороны торговых партнеров оказался больше ожиданий. Прогнозы аналитиков по цене на нефть марки Brent в 2025 г. были пересмотрены вниз до 70 долл./барр., с учетом дисконта налоговая цена на российскую нефть ожидается на уровне 58 долл./барр. Это ниже как бюджетных планов - 69,7 долл./барр., так и «бюджетного правила» - 60 долл./барр.
+Ожидания по росту экономики в 2025 г. снижаются – медианный прогноз роста ВВП сократился до 1% (с начала 2024 г. средний прогноз - 1,5%). Фактические данные за 1 кв. 2025 г. оказались ниже ожиданий консенсуса: 1,4% г/г против 2,3% г/г.
 
-Сохраняются преобладающие ожидания ослабления курса рубля к концу года – до 95 руб./долл. 
+На фоне снижения ожиданий по росту экономики и более быстрому процессу дезинфляции увеличивается число аналитиков, допускающих снижение ключевой ставки в июне (6/15). Прогнозы на конец года пока остаются неизменными - 17%, но с широким диапазоном от 14 до 19%.
 
-Наблюдаемые в данных снижение инфляции и отдельные признаки замедления экономической активности находят отражение в прогнозах аналитиков. Ожидаемая инфляция на конец года снижается (с 7% до 6,8%), как и ожидаемая ключевая ставка (с 18% до 17%).
-
-Темпы роста ВВП в 2025 г., несмотря на снижение цен на нефть и отдельные признаки замедления экономической активности, остаются на уровне 1,5%.
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -96,15 +93,15 @@ hc
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
 ## Список участников
 
-В опросе приняли участие 14 профессиональных аналитиков
+В опросе приняли участие 15 профессиональных аналитиков
 
 | <!-- --> | <!-- --> | <!-- --> |
 |------------------------|--------------------------|----------------------|
-| Акиндинова Наталья ("Центр Развития" НИУ ВШЭ) | Виноградов Артем, Попов Юрий (Сбер КИБ) | Полевой Дмитрий (Астра управление активами) |
-| Байкова Анастастия, Мурашов Cтанислав (Райффайзенбанк) | Жирнов Григорий | ![](../images/PBC_silver.svg){width="50"} Попов Денис (Промсвязьбанк) |
-| Бирюков Павел (Газпромбанк) | Клепач Андрей (ВЭБ.РФ) | Салихов Марсель (Институт энергетики и финансов) |
-| Вайсберг Валерий (ИК РЕГИОН) | Команда ЦМИ (Сбер) | ![](../images/PBC_bronze.svg){width="50"} Тарасенко Дарья (Газпромбанк)  |
-| ![](../images/PBC_gold.svg){width="50"} Васильев Михаил (Совкомбанк) |  Куликов Дмитрий (АКРА) |   |
+| Акиндинова Наталья ("Центр Развития" НИУ ВШЭ) | Виноградов Артем, Попов Юрий (Сбер КИБ) |  Куликов Дмитрий (АКРА) |
+| Байкова Анастастия, Мурашов Cтанислав (Райффайзенбанк) | Вотинов Антон, Овчинников Вячеслав (ЦМИ НИФИ Минфина России) | Полевой Дмитрий (Астра управление активами)  |
+| Бирюков Павел (Газпромбанк) | Жирнов Григорий | ![](../images/PBC_silver.svg){width="50"} Попов Денис (Промсвязьбанк) |
+| Вайсберг Валерий (ИК РЕГИОН) | Клепач Андрей (ВЭБ.РФ) |Салихов Марсель (Институт энергетики и финансов)   |
+| ![](../images/PBC_gold.svg){width="50"} Васильев Михаил (Совкомбанк) | Команда ЦМИ (Сбер) | ![](../images/PBC_bronze.svg){width="50"} Тарасенко Дарья (ЦЭП Газпромбанка) |
 
 *Медалями отмечены участники консенсуса с наиболее точными прогнозами в 2024 г.*
 :::
