--- a/markets/freight-crude.qmd
+++ b/markets/freight-crude.qmd
@@ -17,6 +17,14 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*20.05.2025 Морская логистика. Нефть*
+
+**Фрахт обновил годовой минимум и вернулся к уровню конца 2024 г.**
+
+За последнюю неделю дисбаланс между доступным тоннажом и количеством заявок на перевозку нефти привел к резкому снижению фрахтовых ставок примерно на 1 долл./барр. по всем основным направлениям.
+
+Уменьшение заказов на перевозку нефти CPC в Азию послужило дополнительным фактором падения фрахта в Черном море. Ставка на Suezmax из Новороссийска до Индии упала почти до 5 долл./барр., вернувшись к уровню конца 2024 г. Ставка до Китая рухнула почти до 6 долл./барр., достигнув восьмимесячного минимума.
+
 *13.05.2025 Морская логистика. Нефть*
 
 **Майские праздники охладили экспортную активность**
