--- a/markets/freight-products.qmd
+++ b/markets/freight-products.qmd
@@ -17,6 +17,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*20.05.2025 Морская логистика. Нефтепродукты*
+
+**Ставки «Aframax» вернулись на уровень осени 2024 г. **
+
+Стоимость перевозки светлых нефтепродуктов из портов Балтики и АЧБ в регион Западной Африки снизилась на 4,2 долл./т и 3,3 долл./т н/н соответственно.
+
+Ставки фрахта темных нефтепродуктов судами класса «Aframax» упали более чем на 7 долл./т н/н по всем направлениям.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *13.05.2025 Морская логистика. Нефтепродукты*
 
 **Фрахт светлых нефтепродуктов рухнул, вновь став дешевле темных**
