--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -17,14 +17,30 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*28.04.2025* Уголь
+*26.05.2025* Уголь
 
-**Праздники в Китае немного оживили рынок **
+**Ситуация стабильно сложная**
 
-Неделя до начала государственных праздников в Китае принесла небольшое оживление на рынок. Выходные дни по случаю Дня труда, которые продлятся в КНР с 1 по 5 мая, ожидаемо снизят торговую активность до середины следующей недели.   
+Угольные цены продолжают медленно снижаться, настроения на рынке негативные.
 
 ![](../images/icon-locker.svg){width="6%"}
 [Подробнее](../demo-subscription.qmd)
+
+*19.05.2025* Уголь
+
+**Цены вернулись к падению после праздников**
+
+Профицит угля при сдержанном спросе продолжает оказывать давление на цены. Снижение стоимости китайского угля на внутреннем рынке создает риски введения в Китае защитных мер по ограничению импорта для поддержки местных производителей.
+
+![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+
+*28.04.2025* Уголь
+
+**Праздники в Китае немного оживили рынок**
+
+Неделя до начала государственных праздников в Китае принесла небольшое оживление на рынок. Выходные дни по случаю Дня труда, которые продлятся в КНР с 1 по 5 мая, ожидаемо снизят торговую активность до середины следующей недели.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *21.04.2025* Уголь
 
@@ -34,14 +50,11 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 
-
 *14.04.2025* Уголь
 
 **Неопределенность на рынке растет**
 
-Торговые противостояния, низкие цены и профицит предложения угля внесли еще большую неопределенность на рынок. Укрепление рубля оставляет экспортные нетбэки на энергетический уголь отрицательными.
-![](../images/icon-locker.svg){width="6%"}
-[Подробнее](../demo-subscription.qmd)
+Торговые противостояния, низкие цены и профицит предложения угля внесли еще большую неопределенность на рынок. Укрепление рубля оставляет экспортные нетбэки на энергетический уголь отрицательными. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *07.04.2025* Уголь
 
@@ -49,8 +62,7 @@ format:
 
 Отрицательный экспортный нетбэк на энергетические угли калорийностью 5500 ккал/кг и ниже привел к желанию ряда поставщиков приостановить экспортные поставки. Участники рынка надеются на стабилизацию цен после длительного снижения.
 
-![](../images/icon-locker.svg){width="6%"}
-[Подробнее](../demo-subscription.qmd)
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 ### События
 
@@ -105,6 +117,12 @@ hc
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+### Морская логистика
+
+[Фрахт угля](freight-coal.qmd)
+
+[Перевалка угля](markets-sea-coal-ports.qmd)
+
 ### Методология
 
 [Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
