--- a/markets/markets-fertilizers.qmd
+++ b/markets/markets-fertilizers.qmd
@@ -17,6 +17,22 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*26.05.2025 Минеральные удобрения*
+
+**За тарифную спесивость заплатят фермеры, но не российские**
+
+Европа делает шаг навстречу высоким ценам на минеральные удобрения.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*19.05.2025 Минеральные удобрения*
+
+**Китай возвращается в мировую азотную лигу**
+
+Участники рынка ожидают возобновления экспорта карбамида из Китая в ближайшей перспективе.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *28.04.2025 Минеральные удобрения*
 
 **Индия утолила азотный голод**
@@ -38,14 +54,6 @@ format:
 **Индийский тендер принес нейтральный результат для рынка**
 
 Индийская IPL опубликовала результаты тендера на закупку карбамида: цены на базисе CFR India снизились на 8% относительно прошлого тендера.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*07.04.2025 Минеральные удобрения*
-
-**Мировому рынку удобрений грозит ценовой шторм**
-
-США ввели новые таможенные пошлины, в том числе для стран-поставщиков удобрений на американский рынок. За прошедшую неделю индексы цен Prilled Urea FOB Baltic и Granular Urea FOB Baltic не изменились.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
