--- a/markets/markets-oil-products.qmd
+++ b/markets/markets-oil-products.qmd
@@ -16,6 +16,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*21.05.2025 Бензин*
+
+**Экспортная судьба бензина вновь под ударом**
+
+Международные цены на автомобильный бензин (АБ) выросли более чем на 7,5 долл./т н/н вслед за ростом мировых бенчмарков на нефть.
+
+Минфин России рассматривает двухэтапное увеличение порога от индикативных цен на нефтепродукты при расчете топливного демпфера.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *14.05.2025 Дизель*
 
 **Дисконты на ДТ возвращаются к значениям января 2025 г.**
@@ -33,19 +43,6 @@ format:
 Запасов автомобильного бензина достаточно для нивелирования рисков топливного дефицита на внутреннем рынке.
 
 Сезонный спрос и потребительский ажиотаж на фоне приближающихся плановых ремонтов на нефтеперерабатывающих заводах (НПЗ) подтолкнули внутренние биржевые цены вверх.
-
-*30.04.2025 Дизель*
-
-**Дизель замер в ожидании новых решений США и Китая**
-
-Дисконты на дизельное топливо (ДТ) сохранили значения позапрошлой недели на фоне неопределенности в торговых взаимоотношениях на международной арене.
-
-ФАС России внесла проект приказа о росте тарифа на транспортировку ДТ по отдельным маршрутам.
-
-Основным пунктом назначения морского экспорта ДТ за первые 3 недели апреля 2025 г. стала Турция.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -63,6 +60,13 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+
+### Морская логистика 
+
+[Фрахт нефтепродуктов](freight-products.qmd)
+
+[Перевалка нефтепродуктов](markets-sea-oil-products-ports.qmd)
+
 ### Методология
 
 [Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
