--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -16,14 +16,23 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*21.05.2025 Нефть*
+
+**Дисконт на нефть ESPO достиг 4-месячного минимума**
+
+На прошлой неделе цена российской нефти выросла вслед за мировыми бенчмарками, которые продолжают положительно реагировать на торговое перемирие между США и Китаем. Нефть Urals в Приморске торговалась выше 53 долл./барр., а цена на нефть ESPO превысила отметку в 61 долл./барр.
+
+Индия продолжает скупать свободные объемы нефти ESPO. В этих условиях дисконт на этот сорт нефти с конца апреля 2025 г. сузился на 1 долл./барр. и достигнул минимума с середины января 2025 г., почти полностью отыграв расширение, вызванное ограничениями США против российского ТЭК в начале года.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *14.05.2025 Нефть*
 
 **Торговые переговоры США и Китая переворачивают нефтяной рынок**
 
-После переговоров в конце прошлой недели США и Китай договорились приостановить действие взаимных таможенных пошлин на 90 дней. Это решение встряхнуло нефтяной рынок, и впервые с середины апреля 2025 г. нефтяные котировки перешли к уверенному росту. 
+После переговоров в конце прошлой недели США и Китай договорились приостановить действие взаимных таможенных пошлин на 90 дней. Это решение встряхнуло нефтяной рынок, и впервые с середины апреля 2025 г. нефтяные котировки перешли к уверенному росту.
 
 Несмотря на переход к росту нефтяных котировок в конце прошлой недели, цена на нефть Urals не смогла отыграть низкие значения начала недели, и ее среднее значение опустилось почти до 50 долл./барр. Средняя цена на нефть ESPO также упала ниже 59 долл./барр.
-
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -48,14 +57,6 @@ format:
 Цена на нефть Urals менее 60 долл./барр. привлекает индийских покупателей. По итогам апреля 2025 г. ожидаются рекордные за 1,5-2 года поставки этой нефти в Индию.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*23.04.2025 Нефть*
-
-**Цены на российскую нефть перешли к росту**
-
-На прошлой неделе введение ограничений США против нефтяных поставок иранской нефти и китайского НПЗ взбодрило нефтяной рынок и привело к росту мировых цен на нефть. По итогам недели средняя стоимость dated Brent выросла на 2 долл./барр. н/н и превысила отметку в 67 долл./барр.
-
-Снижение фрахтовых ставок на перевозку российской нефти способствовало увеличению экспорта нефти Urals примерно на треть, а также сужению дисконта на нее почти на 1 долл./барр. н/н. Дисконт на ESPO откорректировался в сторону расширения примерно на 0,6 долл./барр. н/н после сужения неделей ранее на 1,4 долл./барр. н/н.
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -114,6 +115,13 @@ hc
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+
+### Морская логистика
+
+[Фрахт нефти](freight-crude.qmd)
+
+[Перевалка нефти](markets-sea-oil-ports.qmd)
+
 ### Методология
 
 [Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
