--- a/methodology/specs-freight.qmd
+++ b/methodology/specs-freight.qmd
@@ -14,13 +14,13 @@ fig-format: svg
 
 Параметры типовой сделки
 
-| Основные параметры сделки | Танкер класса Aframax)                                                                                            | Танкер класса Suezmax                                                                                             |
-|---------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
-| Тип сделки                | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               |
-| Срок действия ставки      | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
-| Партия, т                 | 100 000                                                                                                           | 135 000                                                                                                           |
-| Условия оплаты            | Типовые, без рассрочки, без привязки к другим контрактам                                                          | Типовые, без рассрочки, без привязки к другим контрактам                                                          |
-| Вторая сторона сделки     | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         |
+| Основные параметры сделки | Танкер класса Aframax) | Танкер класса Suezmax |
+|---------------|-----------------------------|-----------------------------|
+| Тип сделки | Спотовые сделки (разовая перевозка) | Спотовые сделки (разовая перевозка) |
+| Срок действия ставки | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
+| Партия, т | 100 000 | 135 000 |
+| Условия оплаты | Типовые, без рассрочки, без привязки к другим контрактам | Типовые, без рассрочки, без привязки к другим контрактам |
+| Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению | Надежный контрагент, кредитоспособность которого не подвергается сомнению |
 
 #### Типовые направления перевозок
 
@@ -32,8 +32,7 @@ fig-format: svg
 -   Новороссийск - Западное побережье Индии
 -   Новороссийск - Восточное побережье Индии
 -   Новороссийск - Северный Китай
--   Козьмино - Западное побережье Индии
--   Козьмино – Восточное побережье Индии
+-   Новороссийск - Турция
 -   Козьмино - Северный Китай
 -   Прочие направления перевозок грузов, которые отражают рыночные условия и расширяют базу ответов респондентов.
 
@@ -53,14 +52,14 @@ fig-format: svg
 
 Параметры типовой сделки
 
-| Основные параметры сделки | Светлые нефтепродукты (Clean Petroleum Products, CPP)                                                             | Темные нефтепродукты (Dirty Petroleum Products, DPP)                                                              |
-|---------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
-| Тип танкера               | Танкер класса Handysize                                                                                           | Танкер класса Handysize                                                                                           |
-| Тип сделки                | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               |
-| Срок действия ставки      | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
-| Партия, т                 | 30 000                                                                                                            | 30 000                                                                                                            |
-| Условия оплаты            | Типовые, без рассрочки, без привязки к другим контрактам                                                          | Типовые, без рассрочки, без привязки к другим контрактам                                                          |
-| Вторая сторона сделки     | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         |
+| Основные параметры сделки | Светлые нефтепродукты (Clean Petroleum Products, CPP) | Темные нефтепродукты (Dirty Petroleum Products, DPP) |
+|---------------|-----------------------------|-----------------------------|
+| Тип танкера | Танкер класса Handysize | Танкер класса Handysize |
+| Тип сделки | Спотовые сделки (разовая перевозка) | Спотовые сделки (разовая перевозка) |
+| Срок действия ставки | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
+| Партия, т | 30 000 | 30 000 |
+| Условия оплаты | Типовые, без рассрочки, без привязки к другим контрактам | Типовые, без рассрочки, без привязки к другим контрактам |
+| Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению | Надежный контрагент, кредитоспособность которого не подвергается сомнению |
 
 Типовые направления перевозок Ставки фрахта при перевозках нефтепродуктов оцениваются по следующим направлениям перевозок:
 
@@ -83,7 +82,6 @@ fig-format: svg
 -   Порты Черного моря - Турция
 -   Порты Черного моря - Средиземное море
 -   Порты Черного моря - Индия/Ближний Восток
--   Порты Черного моря - Сингапур/Малайзия
 -   Прочие направления перевозок грузов, которые отражают рыночные условия и расширяют базу ответов респондентов.
 
 #### Валюта и единица измерения
@@ -100,13 +98,13 @@ fig-format: svg
 
 Параметры типовой сделки
 
-| Основные параметры сделки | Балкер класса Coaster                                                                                             | Балкер класса Handysize                                                                                           | Танкер класса Supramax                                                                                            |
-|---------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
-| Тип сделки                | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               |
-| Срок действия ставки      | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
-| Партия, т                 | 5 000                                                                                                             | 32 000                                                                                                            | 60 000                                                                                                            |
-| Условия оплаты            | Типовые, без рассрочки, без привязки к другим контрактам                                                          | Типовые, без рассрочки, без привязки к другим контрактам                                                          | Типовые, без рассрочки, без привязки к другим контрактам                                                          |
-| Вторая сторона сделки     | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         |
+| Основные параметры сделки | Балкер класса Coaster | Балкер класса Handysize | Танкер класса Supramax |
+|---------------|-------------------|-------------------|-------------------|
+| Тип сделки | Спотовые сделки (разовая перевозка) | Спотовые сделки (разовая перевозка) | Спотовые сделки (разовая перевозка) |
+| Срок действия ставки | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
+| Партия, т | 5 000 | 32 000 | 60 000 |
+| Условия оплаты | Типовые, без рассрочки, без привязки к другим контрактам | Типовые, без рассрочки, без привязки к другим контрактам | Типовые, без рассрочки, без привязки к другим контрактам |
+| Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению | Надежный контрагент, кредитоспособность которого не подвергается сомнению | Надежный контрагент, кредитоспособность которого не подвергается сомнению |
 
 #### Типовые направления перевозок
 
@@ -140,13 +138,13 @@ fig-format: svg
 
 Параметры типовой сделки
 
-| Основные параметры сделки | Балкер класса Capesize                                                                                            | Балкер класса Panamax                                                                                             | Балкер класса Handysize                                                                                           |
-|---------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
-| Тип сделки                | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               |
-| Срок действия ставки      | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
-| Партия, т                 | 180 000                                                                                                           | 80 000                                                                                                            | 40 000                                                                                                            |
-| Условия оплаты            | Типовые, без рассрочки, без привязки к другим контрактам                                                          | Типовые, без рассрочки, без привязки к другим контрактам                                                          | Типовые, без рассрочки, без привязки к другим контрактам                                                          |
-| Вторая сторона сделки     | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         |
+| Основные параметры сделки | Балкер класса Capesize | Балкер класса Panamax | Балкер класса Handysize |
+|---------------|-------------------|-------------------|-------------------|
+| Тип сделки | Спотовые сделки (разовая перевозка) | Спотовые сделки (разовая перевозка) | Спотовые сделки (разовая перевозка) |
+| Срок действия ставки | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
+| Партия, т | 180 000 | 80 000 | 40 000 |
+| Условия оплаты | Типовые, без рассрочки, без привязки к другим контрактам | Типовые, без рассрочки, без привязки к другим контрактам | Типовые, без рассрочки, без привязки к другим контрактам |
+| Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению | Надежный контрагент, кредитоспособность которого не подвергается сомнению | Надежный контрагент, кредитоспособность которого не подвергается сомнению |
 
 Типовые направления перевозок Ставки фрахта при перевозках угля оцениваются по следующим направлениям перевозок:
 
