--- a/forecasts/forecast-agro.qmd
+++ b/forecasts/forecast-agro.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: февраль 2025 г.
+## Результаты опроса: май 2025 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -48,9 +48,10 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-Аналитики вновь снизили оценки урожая 2025 года по зерновым культурам, а по масличным – в основном увеличили. Рост сборов масличных прогнозируется из-за повышенного интереса к их выращиванию на фоне низкой рентабельности в зерновых.
+Аналитики повысили ожидания по валовой сбору пшеницы при практически не изменившихся оценках общего валовой сбора зерновых. Рост связан с улучшением состояния озимых в ряде регионов.
 
-Экспортный потенциал по пшенице согласно консенсус-прогнозу уже ниже 40 млн тонн в будущем сезоне. По подсолнечному маслу, напротив, экспорт в следующем сезоне может быть выше, чем в рекордном 2023/24.
+По сравнению с февралем подросли оценки сбора подсолнечника и сои. Масличные остаются наиболее интересными в текущей посевной кампании культурами.
+
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -80,7 +81,7 @@ df_range <- df_range %>% pivot_longer(-X1, names_to = "date", values_to = 'value
 
 hc <- highchart() %>% 
    hc_xAxis(type = "category") %>%
-   hc_yAxis(title  = list(text = 'млн т'), max = 6, min = 3.5) %>% 
+   hc_yAxis(title  = list(text = 'млн т'), max = 5.5, min = 4.5) %>% 
    hc_plotOptions(area = list(stacking = 'normal')) %>%
    hc_add_series(df_range, hcaes(x = date, y = round(value,2), group = X1), type = 'area', color = c('#d1e5ff','#ffffff')) %>%
    hc_add_series(df_last, type="line", hcaes(x = date, y = round(value,2), group=index), color = "#1A4AFC", dataLabels = TRUE) %>%
@@ -98,12 +99,12 @@ hc
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
 ## Список участников
 
-В опросе приняли участие 7 профессиональных аналитиков, 3 из них дали согласие на раскрытие информации об их участии в опросе:
+В опросе приняли участие 7 профессиональных аналитиков, 5 из них дали согласие на раскрытие информации об их участии в опросе:
 
 | <!-- --> | <!-- --> | <!-- --> |
 |------------------------|--------------------------|----------------------|
-| Павенский Игорь (Русагротранс) | Петриченко Владимир (ПроЗерно) | Снитко Дарья (Газпромбанк) |
-|  | *4 участника не подтвердили согласие на раскрытие данных* |  |
+| Лилия Варыгина (Oleoscope) | Игорь Павенский (Русагротранс) | Снитко Дарья (Газпромбанк) |
+| Лидия Илюшина (Институт исследований и экспертизы ВЭБ) | Владимир Петриченко (ПроЗерно) | *2 участника не подтвердили согласие на раскрытие данных* |
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
