--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,15 +17,27 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*26.05.2025 Пшеница*
+
+**Никаких рекомендаций по цене экспорта пшеницы до конца сезона**
+
+Экспортные цены на пшеницу снизились на 3 долл. по сравнению с прошлой неделей.
+
+Reuters пишет, что российские власти отказались от неофициальной минимальной рекомендованной цены на пшеницу для экспортеров до конца сезона. 
+
+ЕС может с 6 июня 2025 г. вернуть квоты на ввоз сельхозпродукции из Украины.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *19.05.2025 Пшеница*
 
 **USDA прогнозирует рекордный урожай пшеницы в 2025/26 г.**
 
-Экспортные цены на пшеницу остались на уровне прошлой недели. 
+Экспортные цены на пшеницу остались на уровне прошлой недели.
 
-Эфиопия может снизить импорт пшеницы на 24% до 1,3 млн т в 2025/26 г. 
+Эфиопия может снизить импорт пшеницы на 24% до 1,3 млн т в 2025/26 г.
 
-По прогнозам USDA мировое производство пшеницы в 2025/26 г. вырастет на 8,8 млн т до рекордных 808,5 млн т. 
+По прогнозам USDA мировое производство пшеницы в 2025/26 г. вырастет на 8,8 млн т до рекордных 808,5 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -88,7 +100,6 @@ format:
 В крупнейшем аграрном порту Аргентины, Росарио, началась масштабная забастовка, затрудняющая отплытие судов.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -138,6 +149,12 @@ hc
 
 ::::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+### Морская логистика
+
+[Фрахт зерна](freight-wheat.qmd)
+
+[Перевалка зерна](markets-sea-coal-ports.qmd)
+
 ### Методология
 
 [Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
