--- a/methodology/specs-ports.qmd
+++ b/methodology/specs-ports.qmd
@@ -14,41 +14,47 @@ fig-format: svg
 
 Продукт и его характеристики
 
-| Продукт | Условия |
-|----|----|
-| Срок действия тарифа | Действующий на момент издания отчета |
-| Партия | Не менее 5000 т |
-| Условия предоставления тарифа | Типовые, без специальных скидок |
-| Условия оплаты | Типовые, без рассрочки, без привязки к другим контрактам |
-| Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению |
++----------------------------------+---------------------------------------------------------------------------+
+| Продукт                          | Условия                                                                   |
++==================================+===========================================================================+
+| Срок действия тарифа             | Действующий на момент издания отчета                                      |
++----------------------------------+---------------------------------------------------------------------------+
+| Партия                           | Не менее 5000 т                                                           |
++----------------------------------+---------------------------------------------------------------------------+
+| Условия предоставления тарифа    | Типовые, без специальных скидок                                           |
++----------------------------------+---------------------------------------------------------------------------+
+| Условия оплаты                   | Типовые, без рассрочки, без привязки к другим контрактам                  |
++----------------------------------+---------------------------------------------------------------------------+
+| Вторая сторона сделки            | Надежный контрагент, кредитоспособность которого не подвергается сомнению |
++----------------------------------+---------------------------------------------------------------------------+
 
 ### Уголь
 
 Продукт и его характеристики
 
-+---------+--------------------+-------------+
-| Продукт | Бассейн            | Порт        |
-+=========+====================+=============+
-| Уголь   | Балтийский         | Высоцк      |
-|         |                    |             |
-|         |                    | Мурманск    |
-|         |                    |             |
-|         |                    | Усть-Луга   |
-+---------+--------------------+-------------+
-| Уголь   | Азово-Черноморский | Тамань      |
-|         |                    |             |
-|         |                    | Туапсе      |
-+---------+--------------------+-------------+
-| Уголь   | Дальневосточный    | Ванино      |
-|         |                    |             |
-|         |                    | Владивосток |
-|         |                    |             |
-|         |                    | Восточный   |
-|         |                    |             |
-|         |                    | Находка     |
-|         |                    |             |
-|         |                    | Посьет      |
-+---------+--------------------+-------------+
++------------+--------------------+-------------+
+| Продукт    | Бассейн            | Порт        |
++============+====================+=============+
+| Уголь      | Балтийский         | Высоцк      |
+|            |                    |             |
+|            |                    | Мурманск    |
+|            |                    |             |
+|            |                    | Усть-Луга   |
++------------+--------------------+-------------+
+| Уголь      | Азово-Черноморский | Тамань      |
+|            |                    |             |
+|            |                    | Туапсе      |
++------------+--------------------+-------------+
+| Уголь      | Дальневосточный    | Ванино      |
+|            |                    |             |
+|            |                    | Владивосток |
+|            |                    |             |
+|            |                    | Восточный   |
+|            |                    |             |
+|            |                    | Находка     |
+|            |                    |             |
+|            |                    | Посьет      |
++------------+--------------------+-------------+
 
 #### Валюта и единица измерения
 
@@ -63,89 +69,75 @@ fig-format: svg
 
 Продукт и его характеристики
 
-+----------+--------------------+--------------+
-| Продукт  | Бассейн            | Порт         |
-+==========+====================+==============+
-| Зерновые | Балтийский         | Высоцк       |
-|          |                    |              |
-|          |                    | Калининград  |
-+----------+--------------------+--------------+
-| Зерновые | Азово-Черноморский | Новороссийск |
-|          |                    |              |
-|          |                    | Туапсе       |
-|          |                    |              |
-|          |                    | Севастополь  |
-|          |                    |              |
-|          |                    | Ейск         |
-|          |                    |              |
-|          |                    | Азов         |
-|          |                    |              |
-|          |                    | Кавказ       |
-|          |                    |              |
-|          |                    | Феодосия     |
-+----------+--------------------+--------------+
-| Зерновые | Каспийский         | Астрахань    |
-+----------+--------------------+--------------+
++-------------+--------------------+--------------+
+| Продукт     | Бассейн            | Порт         |
++=============+====================+==============+
+| Зерновые    | Балтийский         | Высоцк       |
+|             |                    |              |
+|             |                    | Калининград  |
++-------------+--------------------+--------------+
+| Зерновые    | Азово-Черноморский | Новороссийск |
+|             |                    |              |
+|             |                    | Туапсе       |
+|             |                    |              |
+|             |                    | Севастополь  |
+|             |                    |              |
+|             |                    | Ейск         |
+|             |                    |              |
+|             |                    | Азов         |
+|             |                    |              |
+|             |                    | Кавказ       |
+|             |                    |              |
+|             |                    | Феодосия     |
++-------------+--------------------+--------------+
+| Зерновые    | Каспийский         | Астрахань    |
++-------------+--------------------+--------------+
 
 ### Нефть
 
 Перечень продуктов и портов
 
-+---------+--------------------+----------------------+
-| Продукт | Бассейн            | Порт                 |
-+=========+====================+======================+
-| Нефть   | Балтийский         | Мурманск             |
-|         |                    |                      |
-|         |                    | Приморск             |
-|         |                    |                      |
-|         |                    | Усть-Луга            |
-+---------+--------------------+----------------------+
-| Нефть   | Азово-Черноморский | Кавказ               |
-|         |                    |                      |
-|         |                    | Новороссийск         |
-+---------+--------------------+----------------------+
-| Нефть   | Дальневосточный    | Восточный (Козьмино) |
-|         |                    |                      |
-|         |                    | Де-Кастри            |
-|         |                    |                      |
-|         |                    | Пригородное          |
-+---------+--------------------+----------------------+
-| Нефть   | Арктический        | Варандей             |
-+---------+--------------------+----------------------+
++--------------+--------------------+----------------------+
+| Продукт      | Бассейн            | Порт                 |
++==============+====================+======================+
+| Нефть        | Балтийский         | Приморск             |
+|              |                    |                      |
+|              |                    | Усть-Луга            |
++--------------+--------------------+----------------------+
+| Нефть        | Азово-Черноморский | Новороссийск         |
++--------------+--------------------+----------------------+
+| Нефть        | Дальневосточный    | Восточный (Козьмино) |
++--------------+--------------------+----------------------+
 
 ### Нефтепродукты
 
 Перечень продуктов и портов
 
-+---------------+--------------------+-----------------+
-| Продукт       | Бассейн            | Порт            |
-+===============+====================+=================+
-| Нефтепродукты | Балтийский         | Высоцк          |
-|               |                    |                 |
-|               |                    | Калининград     |
-|               |                    |                 |
-|               |                    | Мурманск        |
-|               |                    |                 |
-|               |                    | Приморск        |
-|               |                    |                 |
-|               |                    | Санкт-Петербург |
-|               |                    |                 |
-|               |                    | Усть-Луга       |
-+---------------+--------------------+-----------------+
-| Нефтепродукты | Азово-Черноморский | Новороссийск    |
-|               |                    |                 |
-|               |                    | Тамань          |
-|               |                    |                 |
-|               |                    | Темрюк          |
-|               |                    |                 |
-|               |                    | Туапсе          |
-+---------------+--------------------+-----------------+
-| Нефтепродукты | Дальневосточный    | Ванино          |
-|               |                    |                 |
-|               |                    | Владивосток     |
-|               |                    |                 |
-|               |                    | Находка         |
-+---------------+--------------------+-----------------+
++----------------+--------------------+-----------------+
+| Продукт        | Бассейн            | Порт            |
++================+====================+=================+
+| Нефтепродукты  | Балтийский         | Высоцк          |
+|                |                    |                 |
+|                |                    | Мурманск        |
+|                |                    |                 |
+|                |                    | Приморск        |
+|                |                    |                 |
+|                |                    | Санкт-Петербург |
+|                |                    |                 |
+|                |                    | Усть-Луга       |
++----------------+--------------------+-----------------+
+| Нефтепродукты  | Азово-Черноморский | Новороссийск    |
+|                |                    |                 |
+|                |                    | Тамань          |
+|                |                    |                 |
+|                |                    | Туапсе          |
++----------------+--------------------+-----------------+
+| Нефтепродукты  | Дальневосточный    | Ванино          |
+|                |                    |                 |
+|                |                    | Владивосток     |
+|                |                    |                 |
+|                |                    | Находка         |
++----------------+--------------------+-----------------+
 
 #### Валюта и единица измерения
 
@@ -159,19 +151,19 @@ fig-format: svg
 
 ### Контейнеры
 
-+------------+--------------------+-----------------+
-| Продукт    | Бассейн            | Порт            |
-+============+====================+=================+
-| Контейнеры | Балтийский         | Санкт-Петербург |
-|            |                    |                 |
-|            |                    | Калининград     |
-+------------+--------------------+-----------------+
-| Контейнеры | Азово-Черноморский | Новороссийск    |
-+------------+--------------------+-----------------+
-| Контейнеры | Дальневосточный    | Владивосток     |
-|            |                    |                 |
-|            |                    | Восточный       |
-+------------+--------------------+-----------------+
++---------------+--------------------+-----------------+
+| Продукт       | Бассейн            | Порт            |
++===============+====================+=================+
+| Контейнеры    | Балтийский         | Санкт-Петербург |
+|               |                    |                 |
+|               |                    | Калининград     |
++---------------+--------------------+-----------------+
+| Контейнеры    | Азово-Черноморский | Новороссийск    |
++---------------+--------------------+-----------------+
+| Контейнеры    | Дальневосточный    | Владивосток     |
+|               |                    |                 |
+|               |                    | Восточный       |
++---------------+--------------------+-----------------+
 
 Ставки на перевалку публикуются для следующих типов контейнеров:
 
