--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -117,21 +117,21 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [0,0 п.]{.my-custom-class style="color:44bf78;"}** ([**-4,8 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [+0,1 п.]{.my-custom-class style="color:#44bf78;"}** ([**-1,0 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: нефть [**+0,8%**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**-1,7%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: трубопроводный газ [**+4,3%**]{.my-custom-class style="color:#44bf78;"}, нефтепродукты [**-2,4%**]{.my-custom-class style="color:#f6514c;"}
 
-Наибольшие вклады в изменение Индекса за неделю: нефть [**-3,0 п.**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-1,2 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: трубопроводный газ [**+0,3 п.**]{.my-custom-class style="color:#44bf78;"}, нефтепродукты [**-0,1 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
 df_factor <- df[12:21,] %>% pivot_longer(-X1, names_to = "date", values_to = 'value')
 df_factor$date <- as.Date(df_factor$date)
-df_factor <- subset(df_factor, df_factor$date>'2024-02-01')
+df_factor <- subset(df_factor, df_factor$date>'2024-05-01')
 
 df_diff <- df[11,] %>% pivot_longer(-X1, names_to = "date", values_to = 'value')
 df_diff$date <- as.Date(df_diff$date)
-df_diff <- subset(df_diff, df_diff$date>'2024-02-01')
+df_diff <- subset(df_diff, df_diff$date>'2024-05-01')
 
 factor_plot <- highchart() %>% 
    #hc_chart(type  = 'column') %>%
